--- a/PerPixelAE/example_report_config.yaml
+++ b/PerPixelAE/example_report_config.yaml
@@ -1,24 +1,28 @@
 name: test # name of the report
 
 ### DATASET ###
-datasets: [ /home/nathaniel/Downloads/bedding_dataset/exported/val ]
+datasets: [ ../data/bedding_dataset/exported/val ]
 labels: [ /home/nathaniel/Downloads/labels ]
 normalize: True # weather to normalize the data or not before putting it through the network
 means: [ 0.31257936, 0.43269954, 0.50889452, 0.64886759, 0.5958548, 0.39783356 ] # calculated mean per channel for the given dataset
 stds: [ 0.13495414, 0.17394394, 0.19844727, 0.21376508, 0.19457226, 0.13772688 ] # calculated standard deviation per channel for the given dataset
 channels: ALL # which channels to use, 'ALL' for 6 channel models, 'RGB' or 'SWIR' for 3 channel models
 max_img_shape: 3000 # make this the same size the model was trained with
+white_percentage: 0.55 # Diffuse reflectance of the white target used as reference for the reflectance calculation
+
 
 ### MODEL ###
 Model:
   checkpoints: best_teacher_6_channel.pth # checkpoint of the pretrained teacher
-  model_size: medium # wich model size to use, either 'medium' or 'small'
-  batch_size: 1 # this should always be 1 for EfficientAD
-  channel_size: 384 # number of teacher output channels
+  use_large: true # whether to use the large network size
+  encoding_dim: 1 # dimension of the encoding dimension
   in_channels: 6 # number of input channels to the model
-  use_imgNet_penalty: True # weather to use the imageNet loss penalty in training, this is set for compatibility reasons
+  loss: "Hybrid" # Loss function to use, either "MSE", "SAM", or "Hybrid"
+learning_rate: 0.001
+max_epochs: 40 # number of epochs to train the model for
+batch_size: 4 # maximum number of datacubes to load in each batch
 seed: 42
-checkpoint_to_load: ./EAD_model_0.93_new.ckpt # path to the model checkpoint which should be used for interference
+use_tensorboard: true # whether to use the Tensorboard GUI
 
 ### REPORT ###
 create_images: false # whether to create inference and overlay images
