--- a/EfficientAD/example_report_config.yaml
+++ b/EfficientAD/example_report_config.yaml
@@ -1,7 +1,7 @@
 name: test # name of the report
 
 ### DATASET ###
-datasets: [ ../data/bedding_dataset/val ]
+datasets: [ ../data/bedding_dataset/exported/val ]
 normalize: True # weather to normalize the data or not before putting it through the network
 means: [ 0.31257936, 0.43269954, 0.50889452, 0.64886759, 0.5958548, 0.39783356 ] # calculated mean per channel for the given dataset
 stds: [ 0.13495414, 0.17394394, 0.19844727, 0.21376508, 0.19457226, 0.13772688 ] # calculated standard deviation per channel for the given dataset
@@ -20,6 +20,8 @@ seed: 42
 checkpoint_to_load: ./EAD_model_0.93_new.ckpt # path to the model checkpoint which should be used for interference
 
 ### REPORT ###
-create_images: true # weather to create inference and overlay images
+create_images: false # whether to create inference and overlay images
 plot_thresholds: [ 0.5,0.4,0.3 ] # which thresholds to plot
 overlay: RGB # which image part to use for the overlay, either 'RGB' or 'SWIR'
+create_roc: true # whether to create ROC curves for images
+annotations: ./annotations.json
